Switch to gelf.

--- a/logstash/pipeline/logstash.conf
+++ b/logstash/pipeline/logstash.conf
@@ -1,6 +1,7 @@
 input {
-	tcp {
+	gelf {
 		port => 5000
+		id => "gelf1"
 	}
 }
 
@@ -8,6 +9,6 @@ input {
 
 output {
 	elasticsearch {
-		hosts => "elasticsearch:9200"
+		hosts => ["http://elasticsearch:9200"]
 	}
 }
