--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,48 +1,96 @@
 version: '2'
 
+networks:
+  elk:
+    driver: bridge
+
 services:
-  elasticsearch:
-    build: elasticsearch/
+
+  elasticsearch1:
+    restart: always
+    build: submodules/docker-elk/elasticsearch/
+    container_name: elasticsearch1
+    cap_add:
+      - IPC_LOCK
+    ulimits:
+      memlock:
+        soft: -1
+        hard: -1
+      nofile:
+        soft: 65536
+        hard: 65536
+    mem_limit: 1g
+    networks:
+      - elk
+    #   - esnet
     ports:
-      - "9200:9200"
-      - "9300:9300"
+      - 9200:9200
+      - 9300:9300
     volumes:
       - /mnt/elasticsearch/data:/usr/share/elasticsearch/data
     environment:
-      ES_JAVA_OPTS: "-Xms1g -Xmx1g"
+      # - cluster.name=docker-cluster
+      # - bootstrap.memory_lock=true
+      - "ES_JAVA_OPTS=-Xms1g -Xmx1g"
       # disable X-Pack
       # see https://www.elastic.co/guide/en/x-pack/current/xpack-settings.html
       #     https://www.elastic.co/guide/en/x-pack/current/installing-xpack.html#xpack-enabling
-      xpack.security.enabled: "false"
-      xpack.monitoring.enabled: "false"
-      xpack.graph.enabled: "false"
-      xpack.watcher.enabled: "false"
-    networks:
-      - docker_elk
+      - xpack.security.enabled=false
+      - xpack.monitoring.enabled=false
+      - xpack.graph.enabled=false
+      - xpack.watcher.enabled=false
+  # elasticsearch2:
+  #   restart: always
+  #   build: submodules/docker-elk/elasticsearch/
+  #   container_name: elasticsearch2
+  #   cap_add:
+  #     - IPC_LOCK
+  #   ulimits:
+  #     memlock:
+  #       soft: -1
+  #       hard: -1
+  #     nofile:
+  #       soft: 65536
+  #       hard: 65536
+  #   mem_limit: 1g
+  #   networks:
+  #     - esnet
+  #   volumes:
+  #     - /mnt/elasticsearch2/data:/usr/share/elasticsearch/data
+  #   environment:
+  #     - cluster.name=docker-cluster
+  #     - bootstrap.memory_lock=true
+  #     - "ES_JAVA_OPTS=-Xms1g -Xmx1g"
+  #     - "discovery.zen.ping.unicast.hosts=elasticsearch1"
+
   logstash:
-    build: logstash/
-    volumes:
-      - ./logstash/config/logstash.yml:/usr/share/logstash/config/logstash.yml
-      - ./logstash/pipeline:/usr/share/logstash/pipeline
-    ports:
-      - "5000:5000"
-    networks:
-      - docker_elk
+    restart: always
+    build: submodules/docker-elk/logstash/
+    container_name: logstash
     depends_on:
-      - elasticsearch
+      - elasticsearch1
+    #  - elasticsearch2
+    networks:
+      - elk
+    ports:
+      - 5000:5000/udp
+    volumes:
+      - ./submodules/docker-elk/logstash/config/logstash.yml:/usr/share/logstash/config/logstash.yml
+      - ./submodules/docker-elk/logstash/pipeline:/usr/share/logstash/pipeline
     environment:
       - LS_HEAP_SIZE=1024m
-  kibana:
-    build: kibana/
-    volumes:
-      - ./kibana/config/:/usr/share/kibana/config
-    ports:
-      - "5601:5601"
-    networks:
-      - docker_elk
-    depends_on:
-      - elasticsearch
 
-networks:
-  docker_elk:
-    driver: bridge
+  kibana:
+    restart: always
+    build: submodules/docker-elk/kibana/
+    container_name: kibana
+    depends_on:
+      - nginx-proxy
+      - elasticsearch1
+    #  - elasticsearch2
+    networks:
+      - elk
+    ports:
+      - 5601:5601
+    volumes:
+      - ./submodules/docker-elk/kibana/config/:/usr/share/kibana/config
