--- a/logstash/pipeline/logstash.conf
+++ b/logstash/pipeline/logstash.conf
@@ -1,11 +1,33 @@
 input {
+	syslog {
+		type => syslog
+		port => 25826
+	}
 	udp {
 		port => 5000
 	}
 }
 
 ## Add your filters / logstash plugins configuration here
-
+filter {
+	if "docker/" in [program] {
+		mutate {
+			add_field => {
+				"container_id" => "%{program}"
+			}
+		}
+    	mutate {
+			gsub => [
+				"container_id", "docker/", ""
+			]
+		}
+		mutate {
+			update => [
+				"program", "docker"
+			]
+		}
+	}
+}
 output {
 	elasticsearch {
 		hosts => ["http://elasticsearch:9200"]
