--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,6 +27,7 @@ services:
     networks:
       - elasticsearch-fluentd
       - elasticsearch-logstash
+      - elasticsearch-kibana
     #   - esnet
     ports:
       - 9200:9200
