--- a/fluentd/conf/fluent.conf
+++ b/fluentd/conf/fluent.conf
@@ -8,7 +8,7 @@
   @type copy
   <store>
     @type elasticsearch
-    host elasticsearch
+    host elasticsearch1
     port 9200
     logstash_format true
     logstash_prefix fluentd
