--- a/logstash/pipeline/logstash.conf
+++ b/logstash/pipeline/logstash.conf
@@ -10,8 +10,24 @@ input {
 
 ## Add your filters / logstash plugins configuration here
 filter {
+	if "docker/" in [program] {
+		mutate {
+			add_field => {
+				"container_id" => "%{program}"
+			}
+		}
+    	mutate {
+			gsub => [
+				"container_id", "docker/", ""
+			]
+		}
+		mutate {
+			update => [
+				"program", "docker"
+			]
+		}
+	}
 }
-
 output {
 	elasticsearch {
 		hosts => ["http://elasticsearch1:9200"]
