--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -88,8 +88,9 @@ services:
     build: fluentd/
     container_name: fluentd
     depends_on:
-      - elasticsearch1
-      - elasticsearch2
+      - gateway
+      - master
+      - data
     networks:
       - elasticsearch-fluentd
     ports:
@@ -104,8 +105,9 @@ services:
     build: logstash/
     container_name: logstash
     depends_on:
-      - elasticsearch1
-      - elasticsearch2
+      - gateway
+      - master
+      - data
     networks:
       - elasticsearch-logstash
     ports:
@@ -122,8 +124,9 @@ services:
     build: kibana/
     container_name: kibana
     depends_on:
-      - elasticsearch1
-      - elasticsearch2
+      - gateway
+      - master
+      - data
     networks:
       - elasticsearch-kibana
     ports:
