--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,87 +1,65 @@
 version: '2'
 
 networks:
-  elasticsearch-fluentd:
-    driver: bridge
-  elasticsearch-logstash:
-    driver: bridge
-  elasticsearch-kibana:
-    driver: bridge
-  elasticsearch-cluster:
+  elasticsearch:
     driver: bridge
   
 
 services:
-  gateway:
-    restart: unless-stopped
-    image: itzg/elasticsearch
-    cap_add:
-      - IPC_LOCK
-    networks:
-      - elasticsearch-fluentd
-      - elasticsearch-logstash
-      - elasticsearch-kibana
-      - elasticsearch-cluster
-    ports:
-      - "9200:9200"
-      - "9300:9300"
-    ulimits:
-      memlock:
-        soft: -1
-        hard: -1
-      nofile:
-        soft: 65536
-        hard: 65536
-    volumes:
-      - /opt/vm-data/elasticsearch-gateway/data:/data
-    environment:
-      UNICAST_HOSTS: master
-      TYPE: GATEWAY
-      ES_JAVA_OPTS: "-Xms1g -Xmx2g"
 
   master:
     restart: unless-stopped
     image: itzg/elasticsearch
-    cap_add:
-      - IPC_LOCK
     networks:
-      - elasticsearch-cluster
-    ulimits:
-      memlock:
-        soft: -1
-        hard: -1
-      nofile:
-        soft: 65536
-        hard: 65536
+      - elasticsearch
     volumes:
       - /opt/vm-data/elasticsearch-master/data:/data
     environment:
-      UNICAST_HOSTS: gateway
       TYPE: MASTER
-      MIN_MASTERS: 2
-      ES_JAVA_OPTS: "-Xms1g -Xmx2g"
+      UNICAST_HOSTS: master
+      MIN_MASTERS: 1
+      ES_JAVA_OPTS: "-Xms2g -Xmx2g"
 
   data:
     restart: unless-stopped
     image: itzg/elasticsearch
-    cap_add:
-      - IPC_LOCK
     networks:
-      - elasticsearch-cluster
-    ulimits:
-      memlock:
-        soft: -1
-        hard: -1
-      nofile:
-        soft: 65536
-        hard: 65536
+      - elasticsearch
     volumes:
       - /opt/vm-data/elasticsearch-data/data:/data
     environment:
-      UNICAST_HOSTS: master,gateway
       TYPE: DATA
-      ES_JAVA_OPTS: "-Xms1g -Xmx2g"
+      UNICAST_HOSTS: master
+      ES_JAVA_OPTS: "-Xms2g -Xmx2g"
 
+  gateway:
+    restart: unless-stopped
+    image: itzg/elasticsearch
+    networks:
+      - elasticsearch
+    ports:
+      - "9200:9200"
+      - "9300:9300"
+    volumes:
+      - /opt/vm-data/elasticsearch-gateway/data:/data
+    environment:
+      TYPE: GATEWAY
+      UNICAST_HOSTS: master
+      ES_JAVA_OPTS: "-Xms2g -Xmx2g"
+
+  ingest:
+    restart: unless-stopped
+    image: itzg/elasticsearch
+    networks:
+      - elasticsearch
+    ports:
+      - "9222:9200"
+    volumes:
+      - /opt/vm-data/elasticsearch-ingest/data:/data
+    environment:
+      TYPE: INGEST
+      UNICAST_HOSTS: master
+      ES_JAVA_OPTS: "-Xms2g -Xmx2g"
 
   fluentd:
     restart: unless-stopped
@@ -91,8 +69,9 @@ services:
       - gateway
       - master
       - data
+      - ingest
     networks:
-      - elasticsearch-fluentd
+      - elasticsearch
     ports:
       - "24224:24224"
       - "24224:24224/udp"
@@ -108,8 +87,9 @@ services:
       - gateway
       - master
       - data
+      - ingest
     networks:
-      - elasticsearch-logstash
+      - elasticsearch
     ports:
       - 5000:5000/udp
       - 25826:25826 # syslog port
@@ -127,8 +107,9 @@ services:
       - gateway
       - master
       - data
+      - ingest
     networks:
-      - elasticsearch-kibana
+      - elasticsearch
     ports:
       - 5601:5601
     volumes:
