Filter syslog from ubiquiti.

--- a/logstash/pipeline/logstash.conf
+++ b/logstash/pipeline/logstash.conf
@@ -1,35 +1,53 @@
 input {
-	syslog {
-		type => syslog
+	tcp {
+		type => "syslog"
 		port => 25826
 	}
+}
+
+input {
 	udp {
-		port => 5000
+		type => "syslog"
+		port => 25826
 	}
 }
 
 ## Add your filters / logstash plugins configuration here
 filter {
-	if "docker/" in [program] {
-		mutate {
-			add_field => {
-				"container_id" => "%{program}"
+	if [type] == "syslog" {
+		if [host] =~ /192\.168\.163\.17/ {
+			
+			mutate {
+				add_tag => ["ubiquiti"]
 			}
 		}
-    	mutate {
-			gsub => [
-				"container_id", "docker/", ""
-			]
-		}
-		mutate {
-			update => [
-				"program", "docker"
-			]
+		grok {
+			match => {
+				"message" => "%{SYSLOGBASE}"
+			}
 		}
 	}
+	# if "docker/" in [program] {
+	# 	mutate {
+	# 		add_field => {
+	# 			"container_id" => "%{program}"
+	# 		}
+	# 	}
+    # 	mutate {
+	# 		gsub => [
+	# 			"container_id", "docker/", ""
+	# 		]
+	# 	}
+	# 	mutate {
+	# 		update => [
+	# 			"program", "docker"
+	# 		]
+	# 	}
+	# }
 }
 output {
 	elasticsearch {
-		hosts => ["http://elasticsearch1:9200"]
+		hosts => ["http://gateway:9200"]
+		index => "logstash-%{+YYYY.MM.dd}"
 	}
 }
