--- a/logstash/pipeline/logstash.conf
+++ b/logstash/pipeline/logstash.conf
@@ -47,7 +47,7 @@ filter {
 }
 output {
 	elasticsearch {
-		hosts => ["http://gateway:9200"]
+		hosts => "http://gateway:9200"
 		index => "logstash-%{+YYYY.MM.dd}"
 	}
 }
